Retry to implement a 3d reconstruction image
Now the 3d coordinates get calculated and a stl file will be created

--- a/Classic-Approach/SingleImage3DReconstruction.ipynb
+++ b/Classic-Approach/SingleImage3DReconstruction.ipynb
@@ -3,6 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import cv2\n",
@@ -22,9 +25,6 @@
     "\n",
     "# Detect features in the image\n",
     "kp, des = cv2.SIFT().detectAndCompute(gray, None)\n",
-    "\n",
-    "# Calibrate the camera\n",
-    "#ret, K, distortion, rvecs, tvecs = cv2.calibrateCamera(object_points, image_points, gray.shape[::-1], None, None)\n",
     "\n",
     "# Detect vanishing points in the image\n",
     "vanishing_points, _ = cv2.solvePnPRansac(object_points, image_points, k_matrix, None, flags=cv2.SOLVEPNP_EPNP)\n",
@@ -51,10 +51,7 @@
     "\n",
     "# Save the updated STL model\n",
     "model.save(\"updated_model.stl\")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   }
  ],
  "metadata": {
