classic-approach: add additional code to create a 3d object

--- a/Classic-Approach/Calibration/CamCalibration.ipynb
+++ b/Classic-Approach/Calibration/CamCalibration.ipynb
@@ -74,7 +74,7 @@
     "#cv2.destroyAllWindows()\n",
     "\n",
     "#normalize the object points to the real edge length of a checker and convert to np.array\n",
-    "object_points = np.array(object_points)/checkerDimension\n",
+    "object_points = np.array(object_points)*checkerDimension\n",
     "image_points = np.array(image_points)\n",
     "\n",
     "# Perform camera calibration by\n",
