classic: reformat notebook structure

--- a/Classic-Approach/Calibration/CamCalibration.ipynb
+++ b/Classic-Approach/Calibration/CamCalibration.ipynb
@@ -11,15 +11,14 @@
     "import cv2\n",
     "import numpy as np\n",
     "import glob\n",
-    "import pickle\n",
     "\n",
-    "#read here https://opencv24-python-tutorials.readthedocs.io/en/stable/py_tutorials/py_calib3d/py_calibration/py_calibration.html\n",
+    "#seen here https://opencv24-python-tutorials.readthedocs.io/en/stable/py_tutorials/py_calib3d/py_calibration/py_calibration.html\n",
     "\n",
     "# Define the dimensions of checkerboard\n",
     "CHECKERBOARD = (6, 9)\n",
     "\n",
     "# Define side length\n",
-    "checkerDimension = 0.01882 #meter\n",
+    "checkerDimension = 0.01882  #meter\n",
     "\n",
     "# stop the iteration when specified\n",
     "# accuracy, epsilon, is reached or\n",
@@ -32,9 +31,9 @@
     "image_points = []\n",
     "\n",
     "#  3D points real world coordinates\n",
-    "objectp3d = np.zeros((CHECKERBOARD[0] * CHECKERBOARD[1],3), np.float32)\n",
-    "objectp3d[:,:2] = np.mgrid[0:CHECKERBOARD[0],\n",
-    "                  0:CHECKERBOARD[1]].T.reshape(-1, 2)\n",
+    "objectp3d = np.zeros((CHECKERBOARD[0] * CHECKERBOARD[1], 3), np.float32)\n",
+    "objectp3d[:, :2] = np.mgrid[0:CHECKERBOARD[0],\n",
+    "                   0:CHECKERBOARD[1]].T.reshape(-1, 2)\n",
     "\n",
     "# Extracting path of individual image stored\n",
     "# in a given directory. Since no path is\n",
@@ -74,17 +73,28 @@
     "#cv2.destroyAllWindows()\n",
     "\n",
     "#normalize the object points to the real edge length of a checker and convert to np.array\n",
-    "object_points = np.array(object_points)*checkerDimension\n",
+    "object_points = np.array(object_points) * checkerDimension\n",
     "image_points = np.array(image_points)\n",
     "\n",
     "# Perform camera calibration by\n",
     "# passing the value of above found out 3D points (object_points)\n",
     "# and its corresponding pixel coordinates of the\n",
     "# detected corners (image_points)\n",
-    "ret, k_matrix, distortion, r_vecs, t_vecs = cv2.calibrateCamera(object_points, image_points, grayColor.shape[::-1], None, None)\n",
+    "ret, k_matrix, distortion, r_vecs, t_vecs = cv2.calibrateCamera(object_points,\n",
+    "                                                                image_points,\n",
+    "                                                                grayColor.shape[::-1],\n",
+    "                                                                None, None)\n",
     "\n",
     "#safe the determined calibration parameter in a file, to use them later\n",
-    "np.save('cam_parameters_iPhone8.npy', (object_points, image_points, ret, k_matrix, distortion, np.array(r_vecs), np.array(t_vecs)))"
+    "np.save('cam_parameters_iPhone8.npy',\n",
+    "        (object_points,\n",
+    "         image_points,\n",
+    "         ret,\n",
+    "         k_matrix,\n",
+    "         distortion,\n",
+    "         np.array(r_vecs),\n",
+    "         np.array(t_vecs))\n",
+    "        )"
    ]
   }
  ],
