--- a/deepLearning1/test.ipynb
+++ b/deepLearning1/test.ipynb
@@ -159,7 +159,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 ('ml')",
+   "display_name": "dsp",
    "language": "python",
    "name": "python3"
   },
@@ -173,12 +173,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 | packaged by conda-forge | (main, Nov 22 2022, 08:25:29) [Clang 14.0.6 ]"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "08eac26dc1f80337b7d87e94e7159a5bad95c2e85f47efef91c61359b3afbfe9"
+    "hash": "1a755dc5e03aa9b9edfe8b8eeeeb4d7bfc68ced212f315cb67466ecf507e3c58"
    }
   }
  },
