--- a/Classic-Approach/SingleImage3DReconstruction.ipynb
+++ b/Classic-Approach/SingleImage3DReconstruction.ipynb
@@ -734,7 +734,7 @@
    "execution_count": 0,
    "outputs": [],
    "source": [
-    "# Define the 8 vertices of the cube\n",
+    "# Define the 8 vertices of the cube, corresponding to the ratios of the real object\n",
     "vertices = np.array([\n",
     "    [-1, -1, -1],\n",
     "    [+55, -1, -1],\n",
