--- a/Report_calib.ipynb
+++ b/Report_calib.ipynb
@@ -48,13 +48,55 @@
     "    * With that and the information of the size of the checker in the real world it is possible to map the 3D real world checker in the 2D image plane and determine the camera parameters from the known dimensions of the calibration pattern.\n",
     "5. This parameter then get stored in a numpy object/file to can be later used to undistort the image."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The following image shows the output of the calibration step, where the edges of the checker got detected by the algorithm."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "data": {
+      "text/html": "<img src=\"report-images/cal.png\"/>",
+      "text/plain": "<IPython.core.display.Image object>"
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import Image\n",
+    "Image(url= \"report-images/cal.png\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.10.9"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "767d51c1340bd893661ea55ea3124f6de3c7a262a8b4abca0554b478b1e2ff90"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
