add report and paper

--- a/Report_deep.ipynb
+++ b/Report_deep.ipynb
@@ -195,8 +195,6 @@
    "source": [
     "Furthermore the output of the model is strongly influenced by the input. If the input is not good the output will also not be good. For example if the input is a picture of a chair from the backside the model will only 'see' a square and will not be able to create the right shape.\n",
     "\n",
-    "### Details about the code\n",
-    "\n",
     "_Model_\n",
     "\n",
     "The Model is defines in the PCGModel.py File. (PCG => Point Cloud Generation)\n",
@@ -211,7 +209,7 @@
     "\n",
     "_Fuseing Point clouds_\n",
     "\n",
-    "Since the model puts out only a 2d point cloud we need to fuse the point cloud to get a 3d point cloud. This can be done with pure geometry. This is done in the transform.py helper file.\n"
+    "Since the model puts out only a 2d point cloud we need to fuse the point cloud to get a 3d point cloud. This can be done with pure geometry. This is impemented in the transform.py helper file.\n"
    ]
   },
   {
