add spelling corrections

--- a/Report_deep.ipynb
+++ b/Report_deep.ipynb
@@ -7,29 +7,26 @@
    "source": [
     "## Deep Learning Approach for single image 3d reconstruction\n",
     "\n",
+    "_Moritz Langer_\n",
+    "\n",
     "### Introduction\n",
     "\n",
-    "The main problem with the classical approach is that we are constraint by simple shapes and we can't have a lot of details. With the deep learning approch we try to circumvent this by using a pretrained neural network. This gives us the possibility to create depth because the network has context so it can create a good estimation from a single image.\n",
+    "The main problem with the classical approach is that we are constraint by simple shapes, and we can't have a lot of details. With the deep learning approach, we try to circumvent this by using a pretrained neural network. This gives us the possibility to create depth because the network has context so it can create a good estimation from a single image.\n",
     "\n",
     "_Point Cloud_\n",
     "\n",
-    "The point cloud is a set of points in 3D space. Each point has a position and a color. The position is the 3D coordinates of the point. With the point cloud we can create a 3D model of the object.\n",
+    "The point cloud is a set of points in 3D space. Each point has a position and a colour. The position is the 3D coordinates of the point. With the point cloud we can create a 3D model of the object.\n",
     "\n",
     "### Project Setup\n",
     "\n",
-    "The project is setup with conda. The environment is defined in the file `environment.yml`. To create the environment run the following command:\n",
+    "The project is setup with conda. To run the code pytorch is needed. The code is tested with pytorch 1.13.1 on a macOS machine with an Apple M1 Max Chip.\n",
     "\n",
-    "    conda env create -f environment.yml\n",
     "\n",
-    "To activate the environment run:\n",
-    "    \n",
-    "        conda activate deep\n",
-    "\n",
-    "> Note: The code setup / datadet is used directly from https://github.com/lkhphuc/pytorch-3d-point-cloud-generation with small modifications. Due to a newer version of pytorch the code is not working out of the box. The code is modified to work with pytorch 1.13.1.\n",
+    "> Note: The code setup / dataset is used directly from https://github.com/lkhphuc/pytorch-3d-point-cloud-generation with small modifications. Due to a newer version of pytorch the code is not working out of the box. The code is modified to work with pytorch 1.13.1.\n",
     "\n",
     "_Dataset_\n",
     "\n",
-    "The dataset is a subselection of the ShapeNet dataset, only using the chairs. The Dataset consists of:\n",
+    "The dataset is a sub selection of the ShapeNet dataset, only using the chairs. The Dataset consists of:\n",
     "\n",
     "- Train/test split files (from Perspective Transformer Nets)\n",
     "- Input RGB images (from Perspective Transformer Nets)\n",
@@ -111,32 +108,32 @@
     "- Evaluating on the test set: scripts/evaluate.sh\n",
     "- Computing the error metrics: scripts/evaluate_dist.sh\n",
     "\n",
-    "By default one should run the code in the following order:\n",
+    "By default, one should run the code in the following order:\n",
     "\n",
     "1. Pretrain the network: scripts/train-stg1.sh\n",
     "    - This will save the best pretrained network to `models/ORIG_STG1_adam_trueWD_restart/best.pth`\n",
     "    - as one can see in the logfile `UNI-AIS-ibcc/deepLearning1/logs/ORIG_STG1_adam_trueWD_restart.log` the network is trained for 1000 epochs\n",
     "    - the best epoch is at the end 178\n",
-    "    - this is due to the fact that the first sage only pretrains the network and the second stage fine-tunes the network\n",
+    "    - this is because the first sage only pretrains the network and the second stage fine-tunes the network\n",
     "2. Fine-tune the network: scripts/train-stg2.sh\n",
     "    - With the pretrained network we can now fine-tune the network\n",
     "    - This will save the best pretrained network to `models/ORIG_STG2_adam_trueWD_restart/best.pth`\n",
-    "    - in this sage one epoch tages longer because the network is fine-tuned\n",
-    "    - therefor everey tenth epoch is saved along with the best epoch\n",
+    "    - in this sage one epoch takes longer because the network is fine-tuned\n",
+    "    - therefor every tenth epoch is saved along with the best epoch\n",
     "    - the current model is trained for about 1500 epochs as seen in the log files on an AMD Radeon Vega 64 GPU which takes about 5-6 days\n",
     "3. Evaluate the network: scripts/evaluate.sh\n",
     "\n",
-    "If one now looks at the results of the model one can say that the model is tryíng to recreate the object but the results are not very convincing. If you for example have a look at the earchair: On the one hand the model is not able to create the legs but on the other hand the upper backrest with the 'ears' can be interpreted as the right direction.\n",
+    "If one now looks at the results of the model one can say that the model is trying to recreate the object, but the results are not very convincing. If you for example have a look at the ear chair: On the one hand the model is not able to create the legs but on the other hand the upper backrest with the 'ears' can be interpreted as the right direction.\n",
     "\n",
     "This can mean 2 things:\n",
     "1. The model is not trained enough \n",
-    "    - would need more eopchs\n",
+    "    - would need more epochs\n",
     "    - this means more time / better hardware (GPU clustering) or newer hardware with special accelerators for deep learning\n",
     "2. The model is not able to create the right shape\n",
-    "    - the chosen model is to simple\n",
-    "    - the model itselft is not able to abstract the chair\n",
+    "    - the chosen model is too simple\n",
+    "    - the model itself is not able to abstract the chair\n",
     "\n",
-    "The following code shows the input as  well as the result of the model:"
+    "The following code shows the input as well as the result of the model:"
    ]
   },
   {
@@ -193,12 +190,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Furthermore the output of the model is strongly influenced by the input. If the input is not good the output will also not be good. For example if the input is a picture of a chair from the backside the model will only 'see' a square and will not be able to create the right shape.\n",
+    "Furthermore, the output of the model is strongly influenced by the input. If the input is not good the output will also not be good. For example, if the input is a picture of a chair from the backside the model will only 'see' a square and will not be able to create the right shape.\n",
     "\n",
     "_Model_\n",
     "\n",
-    "The Model is defines in the PCGModel.py File. (PCG => Point Cloud Generation)\n",
-    "The mdoel consists of two elements:\n",
+    "The model is defined in the PCGModel.py File. (PCG => Point Cloud Generation)\n",
+    "The model consists of two elements:\n",
     "1. The encoder\n",
     "    - The encoder is a pretrained network which is used to extract features from the input image\n",
     "    - The encoder is a pretrained VGG16 network\n",
@@ -207,9 +204,9 @@
     "2. The decoder\n",
     "    - The decoder is a network which is trained to create a point cloud from the features of the encoder\n",
     "\n",
-    "_Fuseing Point clouds_\n",
+    "_Fusing Point clouds_\n",
     "\n",
-    "Since the model puts out only a 2d point cloud we need to fuse the point cloud to get a 3d point cloud. This can be done with pure geometry. This is impemented in the transform.py helper file.\n"
+    "Since the model puts out only a 2d point cloud we need to fuse the point cloud to get a 3d point cloud. This can be done with pure geometry. This is implemented in the transform.py helper file.\n"
    ]
   },
   {
@@ -219,7 +216,7 @@
    "source": [
     "## Summary\n",
     "\n",
-    "The topic of 3d reconstruction is a very interesting topic. The classical approach is very limited and can only create simple shapes. The deep learning approach is very promising but the results are not very convincing. The results are very dependent on the input. If the input is not good the output will also not be good. Furthermore both of these Approaches are limited in the application. For the calssical approach the shapes are limited in term of their general form. With the deep learning approach you are limited to the trained network. If you want to recretete houses for example and you train the network on chairs then it would not be able to create the right shape. however if you traint it on both the training would be more time intensive."
+    "The topic of 3d reconstruction is a very interesting topic. The classical approach is very limited and can only create simple shapes. The deep learning approach is very promising, but the results are not very convincing. The results are very dependent on the input. If the input is not good the output will also not be good. Furthermore, both approaches are limited in the application. For the classical approach the shapes are limited in term of their general form. With the deep learning approach, you are limited to the trained network. If you want to recreate houses for example and you train the network on chairs, then it would not be able to create the right shape. However, if you trained it on both the training would be more time intensive."
    ]
   }
  ],
@@ -239,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
