--- a/Report_deep.ipynb
+++ b/Report_deep.ipynb
@@ -216,7 +216,7 @@
    "source": [
     "## Summary\n",
     "\n",
-    "The topic of 3d reconstruction is a very interesting topic. The classical approach is very limited and can only create simple shapes. The deep learning approach is very promising, but the results are not very convincing. The results are very dependent on the input. If the input is not good the output will also not be good. Furthermore, both approaches are limited in the application. For the classical approach the shapes are limited in term of their general form. With the deep learning approach, you are limited to the trained network. If you want to recreate houses for example and you train the network on chairs, then it would not be able to create the right shape. However, if you trained it on both the training would be more time intensive."
+    "The topic of 3d reconstruction is a broad topic with mutliple approaches to a solution. The classical approach is very limited and can only create simple shapes. The deep learning approach is very promising, but the results are not very convincing. (At least for the limited training time in our case) The results are very dependent on the input. If the input is not good the output will also not be good. Furthermore, both approaches are limited in the application. For the classical approach the shapes are limited in term of their general form. With the deep learning approach, you are limited to the trained network. If you want to recreate houses for example and you train the network on chairs, then it would not be able to create the right shape. However, if you trained it on both the training would be more time intensive."
    ]
   }
  ],
