--- a/Report_calib.ipynb
+++ b/Report_calib.ipynb
@@ -22,18 +22,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Introduction\n",
+    "\n",
+    "To create 3D images out of 2D images stereovision is usually used. Therefore two images are needed to create a disparity map. With the help of the disparity map the 3D reconstruction can be developed. But what if you only have one camera and one image? Is it still possible to get a 3D image? \n",
+    "\n",
+    "This question is been analyzed by Michael Hafner, Moritz Langer and Aleksandar Radovic in this project. A single 3D reconstruction can be done with the help of a neural network or without. Both approaches were developed in this project. \n",
+    "\n",
+    "First the classical approach tries to get a 3D image with the help of the vanishing lines of the image. This approach has a lot of limitations which are shown below. To remove this limitations, the second part develops a neural network to achieve the goal of a single image 3D reconstruction. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Classical Approach\n",
     "\n",
     "### Introduction\n",
     "\n",
-    "For the *Imaging Beyond Consumer Cameras PS* we had to come up with two different approaches to 3D reconstruct an object of a single image.\n",
-    "First we implemented a classic approach using just vanishing lines and vanishing points to reconstruct the image.\n",
+    "The classic approach uses just vanishing lines and vanishing points to reconstruct the image.\n",
     "* **Vanishing-Points:** Are points where the extended edge lines of an object´s dimension intersect.\n",
     "* **Vanishing_Lines:** Are lines which connect vanishing points of all 3 dimensions.\n",
     "This information can be used to extract information about the alignment (translation and rotation) of the given object in the image.\n",
     "This chapter explains how we developed our classic 3D reconstruction pipeline from camera calibration to the 3D object shown with Blender.\n",
-    "\n",
-    "Later in this report also the second approach using a neural network gets explained.\n",
     "\n",
     "### Camera Calibration (done by Michael Hafner)\n",
     "Since a camera ex- and intrinsics distort the image, in this project camera calibration was needed to remove those distortions.\n",
@@ -51,21 +62,28 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "The following image shows the output of the calibration step, where the edges of the checker got detected by the algorithm."
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "The following image shows the output of the calibration step, where the edges of the checker got detected by the algorithm."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
-      "text/html": "<img src=\"report-images/cal.png\"/>",
-      "text/plain": "<IPython.core.display.Image object>"
+      "text/html": [
+       "<img src=\"report-images/cal.png\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
      },
      "execution_count": 1,
      "metadata": {},
@@ -75,10 +93,7 @@
    "source": [
     "from IPython.display import Image\n",
     "Image(url= \"report-images/cal.png\")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   }
  ],
  "metadata": {
@@ -89,12 +104,12 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.10.9"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "767d51c1340bd893661ea55ea3124f6de3c7a262a8b4abca0554b478b1e2ff90"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
