--- a/Report_vanish.ipynb
+++ b/Report_vanish.ipynb
@@ -14,6 +14,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imageWithEdges = undistorted_image\n",
+    "gray = cv2.cvtColor(imageWithEdges, cv2.COLOR_RGB2GRAY)\n",
+    "#find optimum parameters for canny (edge detection)\n",
+    "v = np.mean(gray)\n",
+    "sigma = 0.33\n",
+    "cannyTh1 = int(max(0, (1.0 - sigma) * v))\n",
+    "cannyTh2 = int(min(255, (1.0 + sigma) * v))\n",
+    "edges = cv2.Canny(gray, cannyTh1, cannyTh2)\n",
+    "\n",
+    "lines = cv2.HoughLinesP(edges, 1, np.pi / 180, 30, maxLineGap=2500)\n",
+    "whiteImage = np.full((imageWithEdges.shape[0], imageWithEdges.shape[1], imageWithEdges.shape[2]), 255, dtype=np.uint8)\n",
+    "\n",
+    "for line in lines:\n",
+    "    x1, y1, x2, y2 = line[0]\n",
+    "    cv2.line(imageWithEdges, (x1, y1), (x2, y2), (0, 255, 0), 1)\n",
+    "    cv2.line(whiteImage, (x1, y1), (x2, y2), (0, 255, 0), 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
