--- a/Report_vanish.ipynb
+++ b/Report_vanish.ipynb
@@ -180,7 +180,7 @@
     "\n",
     "With this result the 3D reconstruction was explored with many different approaches, but none led to a 3D image of the book. The problem was that the vanishing points are outside the image, what made the distance calculation nearly impossible. Therefore, also for that step a user interaction was needed.\n",
     "\n",
-    "The 3D reconstruction approaches were explored by Michael Hafner and Aleksandar Radovic. Noone could find a solution without an user input. The final 3D reconstruction with the user interaction was developed by Michael Hafner."
+    "The 3D reconstruction approaches were explored by Michael Hafner and Aleksandar Radovic. None could find a solution without a user input. The final 3D reconstruction with the user interaction was developed by Michael Hafner."
    ]
   }
  ],
