add final report

--- a/report.ipynb
+++ b/report.ipynb
@@ -273,7 +273,7 @@
     "\n",
     "With this result the 3D reconstruction was explored with many different approaches, but none led to a 3D image of the book. The problem was that the vanishing points are outside the image, what made the distance calculation nearly impossible. Therefore, also for that step a user interaction was needed.\n",
     "\n",
-    "The 3D reconstruction approaches were explored by Michael Hafner and Aleksandar Radovic. Noone could find a solution without an user input. The final 3D reconstruction with the user interaction was developed by Michael Hafner."
+    "The 3D reconstruction approaches were explored by Michael Hafner and Aleksandar Radovic. None could find a solution without a user input. The final 3D reconstruction with the user interaction was developed by Michael Hafner."
    ]
   },
   {
@@ -362,7 +362,7 @@
     "collapsed": false
    },
    "source": [
-    "The source coordinates (src) got determined as previously mentioned of the vertices of each plane. To become now the plane view, the destination coordinates of those vertices need to be calculated. This was done by creating a rectangle using the vertx coordinates and the ratios of the objects edges. After that those parameter got used to transform the image and cut off the surrounding unnecessary and distorted pixel values."
+    "The source coordinates (src) got determined as previously mentioned of the vertices of each plane. To become now the plane view, the destination coordinates of those vertices need to be calculated. This was done by creating a rectangle using the vertex coordinates and the ratios of the objects edges. After that those parameter got used to transform the image and cut off the surrounding unnecessary and distorted pixel values."
    ]
   },
   {
@@ -397,7 +397,7 @@
     "collapsed": false
    },
    "source": [
-    "This transformation can lead to distortions if there is another object on the corresponding plane. In the example below, there is an ear plug on top of the book cover. It can be seen, that the plug got wrapped by the transformation. So the transformation of object planes just works well on plane surfaces without other objects on top of it or other view restrictions (e.g. chimney on a roof)"
+    "This transformation can lead to distortions if there is another object on the corresponding plane. In the example below, there is an ear plug on top of the book cover. It can be seen, that the plug got wrapped by the transformation. So the transformation of object planes just works well on plain surfaces without other objects on top of it or other view restrictions (e.g. chimney on a roof)"
    ]
   },
   {
@@ -432,7 +432,7 @@
     "collapsed": false
    },
    "source": [
-    "After the transformation, the numpy-stl library got used to create a stl file, which later can be used for a 3D suite e.g. Blender to process the created 3D object further (map the image planes to the object). The code bellow shows, that first the vertices of the object need to be created. This was done by manually defining vertices corresponding to the edge length of the real object. After that, the vertices need to get connected to form a surface, this was done by using triangles. Therefore, the faces array contains the 3 numbers of the vertices which form the face. At last a 3D mesh got created and stored to the stl-file."
+    "After the transformation, the numpy-stl library got used to create a stl file, which later can be used for a 3D suite e.g. Blender to process the created 3D object further (map the image planes to the object). The code bellow shows that first the vertices of the object need to be created. This was done by manually defining vertices corresponding to the edge length of the real object. After that, the vertices need to get connected to form a surface, this was done by using triangles. Therefore, the faces array contains the 3 numbers of the vertices which form the face. At last a 3D mesh got created and stored to the stl-file."
    ]
   },
   {
@@ -603,7 +603,7 @@
     "\n",
     "In the recent approach it was found out that it is possible to create a 3D object using just a single input image. However, the process cannot be fully automated and the user needs to specify additional lines, the object ratios and angles manually. The image transformation to object planes also has limitations, as further objects in the scene can distort the image, and the view/angle is crucial for obtaining the desired result.\n",
     "\n",
-    "The success of the process is highly dependent on the complexity of the object being reconstructed. It was time-consuming and will definitely become more challenging for reconstructing complex objects. So the provided source code in the Classic-Approach folder just works for the given book image. For other objects the code or rather the points and ratios need to be recalculated and measured.\n",
+    "The success of the process is highly dependent on the complexity of the object being reconstructed. It was time-consuming and will definitely become more challenging for reconstructing complex objects. So the provided source code in the Classic-Approach/ folder just works for the given book image. For other objects the code or rather the points and ratios need to be recalculated and measured.\n",
     "\n",
     "Furthermore, the presented approach is suitable for simple objects, more complex objects would require alternative techniques like ToF or structured light to enhance accuracy and performance."
    ]
@@ -628,7 +628,7 @@
     "### Project Setup\n",
     "\n",
     "The project is setup with conda. To run the code pytorch is needed. The code is tested with pytorch 1.13.1 on a macOS machine with an Apple M1 Max Chip.\n",
-    "\n",
+    "The model was trained on a ADM Vega 64 GPU running Ubuntu 20.04.\n",
     "\n",
     "> Note: The code setup / dataset is used directly from https://github.com/lkhphuc/pytorch-3d-point-cloud-generation with small modifications. Due to a newer version of pytorch the code is not working out of the box. The code is modified to work with pytorch 1.13.1.\n",
     "\n",
